--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,7 @@ iframe {
   --border: 2px solid red;
   --greenBnt: #16A600;
   --greenBntHover: #1EC700;
+  --greyBg: rgba(196, 196, 196, 0.25);
   --bgGradient: linear-gradient(14.76deg, rgba(21, 21, 21, 0.8) 18.61%, rgba(21, 21, 21, 0.3) 37.63%, rgba(21, 21, 21, 0) 90.23%);
   font-family: 'Oswald', sans-serif;
 }
@@ -63,6 +64,7 @@ button {
   width: 48rem;
   height: 10rem;
   background-color: var(--greenBnt);
+  color: var(--mainFontColor);
   border: none;
   font-size: 5rem;
   line-height: 6rem;
@@ -100,6 +102,41 @@ button {
 
 .button:hover {
   background-color: var(--greenBntHover);
+}
+
+.buttonList {
+  width: 62.75rem;
+  height: 10rem;
+  -webkit-transform: skewX(-30deg);
+          transform: skewX(-30deg);
+  border: 2px solid var(--greenBnt);
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-weight: 600;
+  font-size: 4rem;
+  line-height: 6rem;
+  letter-spacing: 0.08em;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.buttonList:hover {
+  background: var(--greenBnt);
+  color: var(--mainFontColor);
+}
+
+.buttonList > span {
+  -webkit-transform: skewX(30deg);
+          transform: skewX(30deg);
 }
 
 header {
@@ -542,6 +579,232 @@ footer {
   color: var(--mainFontColor);
   text-transform: uppercase;
   text-align: center;
+  margin: 0 auto;
+}
+
+.tableProduct {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.productTitle {
+  font-weight: bold;
+  font-size: 8rem;
+  line-height: 12rem;
+  text-transform: uppercase;
+  margin: 14rem auto 6rem;
+}
+
+.listProductSelect {
+  margin: 0 auto 8rem;
+}
+
+.listProductSelect ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.technologyStats {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.technologyBlock {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 0 auto;
+}
+
+.tableTechnology {
+  padding-left: 6rem;
+}
+
+.tableText {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  font-weight: 600;
+  font-size: 4rem;
+  line-height: 6rem;
+  width: 167rem;
+  text-transform: uppercase;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.tableText:nth-child(odd) {
+  background-color: var(--greyBg);
+}
+
+.technologyStats {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 12rem;
+}
+
+.tableTextDescr {
+  padding-left: 6rem;
+  height: 12rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.tableTextHar {
+  padding-right: 6rem;
+  height: 12rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.advantages {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.advantagesTitle {
+  font-weight: bold;
+  font-size: 8rem;
+  line-height: 12rem;
+  margin: 0 auto 6rem;
+  text-transform: uppercase;
+}
+
+.advatagesList {
+  font-weight: normal;
+  font-size: 4rem;
+  line-height: 6rem;
+  margin: 0 auto;
+  max-width: 276rem;
+  list-style-image: url("../img/list.svg");
+}
+
+.advantagesBlock {
+  margin: 12rem auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  overflow: hidden;
+}
+
+.appointments,
+.spheres,
+.base {
+  position: relative;
+}
+
+.appointments img,
+.spheres img,
+.base img {
+  z-index: 1;
+}
+
+.appointments,
+.spheres {
+  margin-right: 6rem;
+}
+
+.appText {
+  position: absolute;
+  color: var(--mainFontColor);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 72rem;
+  top: 12rem;
+  left: 6rem;
+  right: 6rem;
+  z-index: 2;
+}
+
+.appText h2 {
+  font-weight: bold;
+  font-size: 6rem;
+  line-height: 10rem;
+  margin: 0 auto 6rem;
+  text-transform: uppercase;
+}
+
+.appText ul {
+  font-weight: normal;
+  font-size: 4rem;
+  line-height: 6rem;
+  margin: 0 auto;
+  -webkit-transform: translateX(8rem);
+          transform: translateX(8rem);
+  list-style-image: url("../img/listW.svg");
+}
+
+.appText ul li {
+  padding-bottom: 2rem;
+}
+
+.appText ul li:last-child {
+  padding-bottom: 0;
+}
+
+.appText span {
+  padding-top: 6rem;
+  font-size: 4rem;
+  line-height: 6rem;
+  -webkit-transform: translateX(8rem);
+          transform: translateX(8rem);
+}
+
+.tableSlider {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.tableSlider .imgInSlider {
+  width: 90rem;
+  height: 60rem;
+  padding-right: 6rem;
+}
+
+.tableSlider .imgInSlider:last-child {
+  padding-right: 0;
+}
+
+.tableSlider .button {
+  margin: 12rem auto 13.75rem;
+}
+
+.tableSliderImg {
   margin: 0 auto;
 }
 /*# sourceMappingURL=style.css.map */
